fixed header to not be cut off

--- a/src/Components/Cards/MiniCard.module.css
+++ b/src/Components/Cards/MiniCard.module.css
@@ -100,7 +100,7 @@
 }
 
 .bottomContainer {
-    min-height: 100vh;
+    min-height: 78vh;
 }
 
 .displaycard {
