--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -4,6 +4,6 @@
   align-items: center;
   background-image: linear-gradient(#000040, #4040FF);
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  
   
   }
